Regression: Duplicating a modifier causes a crash #100394

Closed
opened 2022-08-14 00:47:58 +02:00 by Pavel Duong · 11 comments

System Information
Operating system: Arch Linux
Graphics card: Intel UHD 620

Blender Version
Broken: 3.4
Worked: 3.3
Caused by f12f7800c2

Short description of error

When duplicating a modifier, Blender crashes. Upon crashing, it is supposed to write out the log in /tmp/blender.crash.txt, however it is completely empty.

Exact steps for others to reproduce the error

  1. Add a modifier (eg. Array)
  2. Duplicate it
  3. Witness the crash

duplicate_error.mp4

**System Information** Operating system: Arch Linux Graphics card: Intel UHD 620 **Blender Version** Broken: 3.4 Worked: 3.3 Caused by f12f7800c2 **Short description of error** When duplicating a modifier, Blender crashes. Upon crashing, it is supposed to write out the log in `/tmp/blender.crash.txt`, however it is completely empty. **Exact steps for others to reproduce the error** 1. Add a modifier (eg. Array) 2. Duplicate it 3. Witness the crash [duplicate_error.mp4](https://archive.blender.org/developer/F13381063/duplicate_error.mp4)
Author

Added subscriber: @vignette

Added subscriber: @vignette
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mod_moder

Added subscriber: @mod_moder

I confirm, but it's hard to reproduce and I haven't been able to do it. But once it was

I confirm, but it's hard to reproduce and I haven't been able to do it. But once it was
Contributor

Added subscriber: @persun

Added subscriber: @persun
Contributor

I can consistently reproduce this (Windows 10), and it creates crash.txt.

It seems to be caused by f12f7800c296.

# Blender 3.4.0, Commit date: 2022-08-12 21:55, Hash b5e92c3dfe70
bpy.context.space_data.context = 'MODIFIER'  # Property
bpy.ops.object.modifier_add(type='ARRAY')  # Operator
bpy.ops.object.modifier_copy(modifier="Array")  # Operator

# backtrace
Exception Record:

ExceptionCode         : EXCEPTION_ACCESS_VIOLATION
Exception Address     : 0x00007FF7A2581502
Exception Module      : blender.exe
Exception Flags       : 0x00000000
Exception Parameters  : 0x2
	Parameters[0] : 0x0000000000000000
	Parameters[1] : 0x0000000000000108


Stack trace:
blender.exe         :0x00007FF7A2581460  blender::deg::deg_evaluate_object_modifiers_mode_node_visibility
blender.exe         :0x00007FF7A2570E60  blender::deg::`anonymous namespace'::evaluate_node
blender.exe         :0x00007FF7A2570C00  blender::deg::`anonymous namespace'::deg_task_run_func
blender.exe         :0x00007FF7A74CDBB0  tbb::internal::function_task<Task>::execute
tbb.dll             :0x00007FF8716CF220  tbb::recursive_mutex::scoped_lock::internal_try_acquire
tbb.dll             :0x00007FF8716CF220  tbb::recursive_mutex::scoped_lock::internal_try_acquire
blender.exe         :0x00007FF7A2F1EC00  tbb::internal::task_group_base::wait
blender.exe         :0x00007FF7A25706B0  blender::deg::deg_evaluate_on_refresh
blender.exe         :0x00007FF7A21B2BA0  scene_graph_update_tagged
blender.exe         :0x00007FF7A2483320  wm_event_do_notifiers
blender.exe         :0x00007FF7A2467FB0  WM_main
blender.exe         :0x00007FF7A15512A0  main
blender.exe         :0x00007FF7A76C7DE0  __scrt_common_main_seh
KERNEL32.DLL        :0x00007FF87F787020  BaseThreadInitThunk
ntdll.dll           :0x00007FF87FA62630  RtlUserThreadStart
I can consistently reproduce this (Windows 10), and it creates `crash.txt`. It seems to be caused by `f12f7800c296`. ``` # Blender 3.4.0, Commit date: 2022-08-12 21:55, Hash b5e92c3dfe70 bpy.context.space_data.context = 'MODIFIER' # Property bpy.ops.object.modifier_add(type='ARRAY') # Operator bpy.ops.object.modifier_copy(modifier="Array") # Operator # backtrace Exception Record: ExceptionCode : EXCEPTION_ACCESS_VIOLATION Exception Address : 0x00007FF7A2581502 Exception Module : blender.exe Exception Flags : 0x00000000 Exception Parameters : 0x2 Parameters[0] : 0x0000000000000000 Parameters[1] : 0x0000000000000108 Stack trace: blender.exe :0x00007FF7A2581460 blender::deg::deg_evaluate_object_modifiers_mode_node_visibility blender.exe :0x00007FF7A2570E60 blender::deg::`anonymous namespace'::evaluate_node blender.exe :0x00007FF7A2570C00 blender::deg::`anonymous namespace'::deg_task_run_func blender.exe :0x00007FF7A74CDBB0 tbb::internal::function_task<Task>::execute tbb.dll :0x00007FF8716CF220 tbb::recursive_mutex::scoped_lock::internal_try_acquire tbb.dll :0x00007FF8716CF220 tbb::recursive_mutex::scoped_lock::internal_try_acquire blender.exe :0x00007FF7A2F1EC00 tbb::internal::task_group_base::wait blender.exe :0x00007FF7A25706B0 blender::deg::deg_evaluate_on_refresh blender.exe :0x00007FF7A21B2BA0 scene_graph_update_tagged blender.exe :0x00007FF7A2483320 wm_event_do_notifiers blender.exe :0x00007FF7A2467FB0 WM_main blender.exe :0x00007FF7A15512A0 main blender.exe :0x00007FF7A76C7DE0 __scrt_common_main_seh KERNEL32.DLL :0x00007FF87F787020 BaseThreadInitThunk ntdll.dll :0x00007FF87FA62630 RtlUserThreadStart ```
Pratik Borhade changed title from Regression - Duplicating a modifier causes a crash to Regression: Duplicating a modifier causes a crash 2022-08-15 05:49:08 +02:00
Member

Added subscribers: @Sergey, @PratikPB2123

Added subscribers: @Sergey, @PratikPB2123
Member

First bad commit: f12f7800c2
cc @Sergey

First bad commit: f12f7800c2 cc @Sergey
Sergey Sharybin self-assigned this 2022-08-15 11:20:11 +02:00

This issue was referenced by d8841d0aa3

This issue was referenced by d8841d0aa341e05c8cb9559b116b7e2a9ec11882

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Thanks for the report. Fixed now.
Also added some assert statement to make it easier for others to ensure depsgrasph is used correctly, and fix issues like this more quickly.

Thanks for the report. Fixed now. Also added some assert statement to make it easier for others to ensure depsgrasph is used correctly, and fix issues like this more quickly.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100394
No description provided.