Fix T100394: Regression: Duplicating a modifier causes a crash

Need to update relations when modifiers are added or removed
since those create nodes in the dependency graph.

Added an assert statement to point at possible culprit so
that issues can be fixed more quickly.